--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -4,7 +4,7 @@
 .header .categories>div{
     margin-left: 20px;
 }
-.profile__section >input{
+.search__bar >input{
     outline: none;
     border: 1px solid rgb(0,0,0,0.4);
     border-radius: 20px;
@@ -15,4 +15,16 @@
 }
 .profile__section>*{
     margin-left: 8px;
+}
+.search__bar >button{
+    outline: none;
+    border: none;
+    font-weight: 600;
+    font-size: 14px;
+    margin-left: 4px;
+    padding: 5px;
+    cursor: pointer;
+    background-color: rgb(26, 77, 46);
+    color: #ffffff;
+    border-radius: 5px;
 }
